ConsultingHub/force-app/main/default/objects/RACI__c/RACI__c.object-meta.xml
<CustomObject>
    <description>This is a junction object between Activity and Stakeholder objects</description>
    <label>RACI</label>
    <nameField>
        <displayFormat>RACI-{00000}</displayFormat>
        <label>RACI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RACI</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>