ConsultingHub/force-app/main/default/objects/RACI__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <referenceTo>Stage_Activity__c</referenceTo>
    <relationshipLabel>RACI</relationshipLabel>
    <relationshipName>RACI</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>