ConsultingHub/force-app/main/default/objects/RACI__c/fields/RACI__c.field-meta.xml
<CustomField>
    <fullName>RACI__c</fullName>
    <label>RACI</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R - Responsible</fullName>
            </value>
            <value>
                <fullName>A - Accountable</fullName>
            </value>
            <value>
                <fullName>C - Consulted</fullName>
            </value>
            <value>
                <fullName>I  - Informed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>