ConsultingHub/force-app/main/default/objects/RACI__c/fields/Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder__c</fullName>
    <label>Stakeholder</label>
    <referenceTo>Stakeholder__c</referenceTo>
    <relationshipLabel>RACI</relationshipLabel>
    <relationshipName>RACI</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>